--- a/Lab 7/Hands-On Assignment/Hands-On.css
+++ b/Lab 7/Hands-On Assignment/Hands-On.css
@@ -34,3 +34,109 @@
     background-color: lightgreen;
 }
 
+/*ho_5*/
+
+*{box-sizing: border-box;}
+
+body {
+    background-color: #b8dbed;
+    color: #666666;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+   header{
+       background-color: #000033;
+       color: #ffffff;
+       height: 120px;
+       text-align: center; 
+       padding-top: 30px;
+       padding-left: 3em;
+       font-size: 75%;  
+   }
+
+main {
+    padding-top: 1px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    display: block;
+    background-color: #FFFFFF;
+    margin-left: 190px;
+    padding-left: 30px;
+
+}
+
+   nav {
+       font-weight: bold;
+       padding: 1.5em;
+       font-size: 105%;
+       float: left;
+       width: 160px;
+       text-align: center;
+   }
+   
+   nav ul{
+       list-style: none;
+       margin: 0;
+       padding-left: 0;
+       font-size: 1.2em;
+   }
+   nav ul :link{
+       color: #5c7fa3;
+   }
+   nav ul :visited{
+       color: 344873;
+   }
+   nav ul :hover{
+       color: #a52a2a;
+   }
+
+    h1 {
+        margin-bottom: 0;
+        font-family: Georgia, 'Times New Roman', serif;
+        margin-top: 0px;
+        font-size: 3em;
+        letter-spacing: 0.25em;
+    }    
+    h2 {
+        font-family: Georgia, 'Times New Roman', serif;
+        color: #3399cc;
+        text-shadow: offset 1px #cccccc;
+    }
+    h3 {
+        font-family: Georgia, 'Times New Roman', serif;
+        color: #000033;
+    }
+
+    main ul {
+        list-style-image: url(marker.gif);
+    }
+
+    footer {
+        font-size: 75%;
+        font-style: italic;
+        text-align: center;
+        font-family: Georgia, 'Times New Roman', serif;
+        padding: 20px;
+        margin-left: 190px;
+        background-color: #FFFFFF;
+    }
+    
+    dt {
+        color: #000033;
+    }
+#contact {
+    font-size: 90%;
+}
+#wrapper {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #90c7e3;
+    border: 1px;
+        border-color: #000033;
+    min-width: 960px;
+    max-width: 2048px;
+    box-shadow: offset 3px #333333;
+    background-image: linear-gradient(to bottom, #FFFFFF, #90c7e3);
+}
